2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c : Yet more i18n fixed (see bug #114875). 

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c (fill_list): Fixed bug where themes list
	was not getting filled.
	(game_preferences_callback): Replaced frame with GamesFrame.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: Removed separator from dialogs as in HIG.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c (mark_balls): ngettextised with sane
	defaults for those without ngettext.

2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am:  Fixups so make distcheck works.

2003-05-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c: Reworked the preferences dialog to be more
	usable. It uses a list rather than a menu. Fixes bug
	#94797. Same-gnome also accepts a wider range of image file
	formats now.
	(mark_balls): Minor rewording of string.

2003-05-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c (game_quit_callback): Removed the quit dialog. As
	per the general guideline: Don't ask "Are you sure".
	(move_tagged_balls): gdk_flush is  not needed.
	(disable_timeout): Changed deprecated gtk_timeout functions to be
	g_timeout functions.
	(area_event) and others: Moved the reporting of the number of
	stones selected to the appbar status widget and made it a bit
	more verbose (and hopefully less cryptic).
